Closed Bug 520415 Opened 16 years ago Closed 16 years ago

tab chain in BM manager broken

Categories

(Camino Graveyard :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino2.0

People

(Reporter: phiw2, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: regression, Whiteboard: [camino-2.0])

Attachments

(1 file)

STR: 1. open BM manager (focus is in search field) 2. tab through (location bar, search field),... 3. focus reach left pane of BM manager AR: tab again: nothing moves, focus stays on right pane. ER: focus set on right pane. regression between 10.02 an 10.03 builds --> bug 519922 (backing out that patch locally restores functionality).
Flags: camino2.0?
shift tabbing is less work to repro: 1. open BM manager, focus is in search field 2. shift-tab, focus moves to right-most widget (sort) 3. shift-tab again: no more movement.
Sigh, this is problem the same mistake I made with command-arrow again.
QA Contact: general → stuart.morgan+bugzilla
Target Milestone: --- → Camino2.0
(s/problem/probably/)
Attached patch fixSplinter Review
This is a bit ugly, but the only alternative I could come up with was to move keyDown: to CHBrowserView and then set up a protocol for it to communicate key events up to BrowserWrapper, and that seemed overly roundabout.
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #404504 - Flags: superreview?(mikepinkerton)
Flags: camino2.0? → camino2.0+
Attachment #404504 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
Verified with 2.1a1pre (1.9.0.16pre 2009100901)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: