Camino only - Bug 520415: Don't block keydown events in non-Gecko children of BrowserWrapper. r/sr=pink